tests/snapshots/integration__integration_tests__switch__switch_execute_existing.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - existing-exec
    - "--execute"
    - "echo 'existing worktree' > existing.txt"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpVs8XgR/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mSwitched to worktree for [1mexisting-exec[0m at [WORKTREE_EXISTING_EXEC][0m

----- stderr -----
