tests/snapshots/integration__integration_tests__switch__switch_existing_internal.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--internal"
    - existing-wt
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
__WORKTRUNK_CD__[WORKTREE_EXISTING_WT]
✅ [32mSwitched to worktree for [1m[32mexisting-wt[0m[0m

----- stderr -----
