tests/snapshots/integration__integration_tests__switch__switch_internal_execute_output_then_exit.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - "--internal"
    - switch
    - "--create"
    - output-exit-test
    - "--execute"
    - "echo 'doing work'\nexit 7"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
cd '[REPO].output-exit-test'
echo 'doing work'
exit 7

----- stderr -----
✅ [32m[32mCreated new worktree for [1moutput-exit-test[22m from [1mmain[22m at [1m[REPO].output-exit-test[39m[22m[39m
🔄 [36m[36mExecuting (--execute):[39m[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'doing work'[0m[2m[0m
[107m [0m  [2m[0m[2m[34mexit[0m[2m 7[0m
